ZFIN-8972 write program to read enseembl fasta file and compare transcript records with ZFIN transcripts